static/global.css
@font-face {
  font-family: "Archivo";
  src: url("./font/Archivo-Variable.woff2");
  font-display: swap;
}

@font-face {
  font-display: swap;
  font-family: "Martian Mono";
  src: url("./font/MartianMono.woff2") format("woff2");
}

* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
  font-family: "Archivo", sans-serif;
}

:root {
  --black: #222226;
  --grey: #666666;
  --white: #fff;
  --blue: #364bf7;

  --martian-mono: "Martian Mono", system-ui;
}

h1 {
  font-size: 5rem;
  letter-spacing: -2px;
  line-height: 6rem;
  font-weight: 600;
}

h2 {
  font-size: 4rem;
  letter-spacing: -2px;
  line-height: 4rem;
  font-weight: 600;
}

h3 {
  font-size: 3rem;
  letter-spacing: -2px;
  line-height: 3rem;
  font-weight: 600;
  text-transform: capitalize;
}

h4 {
  font-size: 2rem;
  line-height: 2.5rem;
  font-weight: normal;
}

h5 {
  font-size: 1.5rem;
  line-height: 2.5rem;
  font-weight: 600;
}

h6 {
  font-size: 1.5rem;
  line-height: 2.5rem;
  font-weight: normal;
}

p {
  font-size: 1.12rem;
  line-height: 2rem;
}

a {
  font-family: var(--martian-mono);
  color: var(--blue);
  text-transform: uppercase;
  text-decoration: none;
  display: flex;
  align-items: center;
}

a:focus-visible,
button:focus-visible {
  color: var(--blue);
  font-weight: bolder;
  outline: 3px dashed var(--blue);
}

.subtext {
  font-size: 1rem;
  line-height: 1.5rem;
  letter-spacing: -0.25px;
}

@media (width <= 35em) {
  h1 {
    font-size: 3rem;
    line-height: 100%;
  }

  h2 {
    font-size: 2.5rem;
    line-height: 2.5rem;
  }

  h3 {
    font-size: 2rem;
    line-height: 1.5rem;
  }

  h4 {
    font-size: 1.5rem;
    line-height: 2rem;
  }

  h5 {
    font-size: 1.12rem;
    line-height: 2rem;
  }

  h6 {
    font-size: 1.12rem;
    line-height: 2rem;
  }
}

main {
  line-height: 1.5;
}

footer {
  border-top: 1px solid var(--black);
}

/** Layout Styling */

main {
  max-width: 100vw;
}

@media (width >= 50rem) {
  .main-container {
    display: grid;
    grid-template-columns: 17% 83%;
    grid-template-rows: auto;
  }

  header {
    grid-column: 1;
  }

  main {
    grid-column: 2;
    border-left: 1px solid var(--black);

  }

  footer {
    position: relative; /* Default position */
    grid-column: 1 / 3;
    z-index: 1; /* Ensure it's below the header */
  }

/* @media (width >= 43rem) {
  header,
  main,
  footer {
    width: 100%;
  }

  header {
    border-right: 1px solid var(--black);
    margin-bottom: 0;
  }

  main {
    border-width: 0px 1px 1px 1px;
    border-top: none;
    padding: 0;
  }

  footer {
    border: solid var(--black);
    border-top: 1px;
  }
}

@media (width > 50rem) {
  main {
    border-left: none;
    margin: 1rem 0 0;
    padding-top: 2.5rem;
    justify-self: end;
    max-width: calc(100% - 17% - 0rem);
  }

  footer {
    max-width: calc(100% - 17% - 0rem);
    border: 1px 0 0 0 solid var(--black);
    margin: 0 0;
    justify-self: end;
  }
} */

